<package>
  <name>rqt_sonar_image_view</name>
  <version>0.0.1</version>
  <description>rqt_sonar_image_view provides a GUI plugin for displaying images using sonar_image_proc.</description>
  <maintainer email="amarburg@uw.edu">Aaron Marburg</maintainer>
  <author email="amarburg@uw.edu">Aaron Marburg</author>

  <license>BSD</license>

  <url type="repository">https://github.com/apl-ocean-engineering/rqt_sonar_image_view</url>
  <url type="bugtracker">https://github.com/apl-ocean-engineering/rqt_sonar_image_view</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>sonar_image_proc</build_depend>
  <build_depend>marine_acoustic_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>marine_acoustic_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
